--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,17 @@
 spring:
   flyway:
     enabled: true
-    locations: classpath:db/migration/h2
+    locations: classpath:db/migration/sqlite
   datasource:
-    url: jdbc:h2:mem:document-collector;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
+    url: jdbc:sqlite:rentbot.db
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.sqlite.hibernate.dialect.SQLiteDialect
     hibernate:
       ddl-auto: none
-    database: h2
     properties:
       hibernate:
         generate_statistics: false #Turn it on only when you need for analysing queries. Do not leave it on!
     show-sql: false #Turn it on only when you need for analysing queries. Do not leave it on!
-  h2:
-    console:
-      enabled: true
-      path: /h2
 
 application:
   telegram:
