--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     enabled: true
     locations: classpath:db/migration/sqlite
   datasource:
-    url: jdbc:sqlite:rentbot.db
+    url: ${SPRING_DATASOURCE_URL:jdbc:sqlite:rentbot.db}
   jpa:
     database-platform: org.hibernate.community.dialect.SQLiteDialect
     hibernate:
